--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -46,4 +49,21 @@ body {
   grid-column: 1/13;
   background: pink;
   height: 4em;
+}
+
+ul {
+  display: inline-flex;
+}
+
+nav {
+  display: inline-grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+nav > ul li {
+  display: inline-flex;
+}
+
+ul li {
+  display: block;
 }
